Implement dirty login
