# api/fastapi-fullstack-openapi.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.1.0",
+  "openapi": "3.0.3",
   "info": {
     "title": "Full Stack FastAPI Project",
     "version": "0.1.0"
@@ -15,7 +15,7 @@
         "operationId": "login-login_access_token",
         "requestBody": {
           "content": {
-            "application/x-www-form-urlencoded": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/Body_login-login_access_token"
               }
@@ -30,6 +30,16 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Token"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InvalidRequest"
                 }
               }
             }
@@ -981,6 +991,16 @@
   },
   "components": {
     "schemas": {
+      "InvalidRequest": {
+        "properties": {
+          "detail": {
+            "type": "string",
+            "title": "Detail"
+          }
+        },
+        "type": "object",
+        "title": "InvalidRequest"
+      },
       "Body_login-login_access_token": {
         "properties": {
           "grant_type": {
